--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <h3>Hi There !</h3>
     <h1>I'm <span align="justify">Tousif Mahmud Emon</span></h1>
-    <p align="justify">Currently, I’m studying B.Sc in Internet of Things(IOT) at Bangabandhu Sheikh Mujibar Rahman Digital University, Bangladesh. I’ve completed my SSC from Shaheed Police Smrity College and HSC from Dhaka Residential Model College.</p>
+    <p align="justify">Currently, I’m studying B.Sc in IoT and Robotics Engineering at Bangabandhu Sheikh Mujibar Rahman Digital University, Bangladesh. I’ve completed my SSC from Shaheed Police Smrity College and HSC from Dhaka Residential Model College.</p>
 
     <p align="justify">Besides my academic activities, I’ve done several courses on Graphic Design, Programming, Web Development, Search Engine Optimization, WordPress, Wix, Squarespace, UI & UX and so on. Also I’m working as a freelance web developer in Fiverr.
     </p>
