--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2020 - Current</span>
-        <h3>B.Sc in Internet of Things(IOT)</h3>
+        <h3>B.Sc in IoT and Robotics Engineering</h3>
         <h4>BANGABANDHU SHEIKH MUJIBUR RAHMAN DIGITAL UNIVERSITY, BANGLADESH</h4>
-        <p align="justify">Bangabandhu Sheikh Mujibur Rahman Digital University is the first specialized digital university in Bangladesh. Currently I’m studying Bachelor of Science in Internet of Things(IOT) in this university.</p>
+        <p align="justify">Bangabandhu Sheikh Mujibur Rahman Digital University is the first specialized digital university in Bangladesh. Currently I’m studying Bachelor of Science in IoT and Robotics Engineering in this university.</p>
     </div>
 
     <div class="box">
